--- a/WCSTrainer/Pages/Employees/Index.cshtml
+++ b/WCSTrainer/Pages/Employees/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@page
 @model WCSTrainer.Pages.Employees.IndexModel
 
-@{
-   ViewData["Title"] = "Index";
-}
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<UserAccount> SignInManager
+@inject UserManager<UserAccount> UserManager
 
 <div class="panel">
    <div class="body">
@@ -28,7 +28,15 @@
                         <td>@Html.DisplayFor(modelItem => item.Status)</td>
                         <td>
                            <a asp-page="./Details" asp-route-id="@item.Id" class="btn nbg-btn btnWhite">View</a>
-                           <a asp-page="./Delete" asp-route-id="@item.Id" class="btn nbg-btn btnRed">Delete</a>
+                           @if (SignInManager.IsSignedIn(User)) {
+                              var user = await UserManager.GetUserAsync(User);
+                              if (user != null) {
+                                 var isOwner = await UserManager.IsInRoleAsync(user, "owner");
+                                 if (isOwner) {
+                                    <a asp-page="./Delete" asp-route-id="@item.Id" class="btn nbg-btn btnRed">Delete</a>
+                                 }
+                              }
+                           }
                         </td>
                      </tr>
                   }
