--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -11,7 +11,7 @@
          <div class="list-container">
             <div class="top">
                <div class="left">
-                  <select id="maxCount" class="drop-main">
+                  <select id="pageSize" class="drop-main">
                      <option value="10">10</option>
                      <option value="30">30</option>
                      <option value="50">50</option>
@@ -24,8 +24,8 @@
                   </button>
                </div>
             </div>
-            <div id="orderListContainer" class="order-list">
-            </div>
+            <div id="pagination" class="pagination"></div>
+            <div id="orderListContainer"></div>
          </div>
          <div class="tool-container">
             <div class="tools">
@@ -66,6 +66,4 @@
    </div>
 </div>
 
-@section Scripts {
-   <script src="~/js/trainingOrderList.js" ></script>
-}
+<script src="~/js/trainingOrderList.js"></script>
