Optimizations with permissions complete.

--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -24,7 +24,9 @@
                   </button>
                </div>
             </div>
-            <div id="pagination" class="pagination"></div>
+            <div class="pagination-container">
+               <div id="pagination" class="pagination"></div>
+            </div>
             <div id="orderListContainer"></div>
          </div>
          <div class="tool-container">
