--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -27,7 +27,7 @@
             <div class="pagination-container">
                <div id="pagination" class="pagination"></div>
             </div>
-            <div id="orderListContainer"></div>
+            <div class="order-list-container" id="orderListContainer"></div>
          </div>
          <div class="tool-container">
             <div class="tools">
