--- a/WCSTrainer/wwwroot/css/colors.css
+++ b/WCSTrainer/wwwroot/css/colors.css
@@ -22,34 +22,44 @@
 	--yellow2: #f6af06;
 	--purple1: #818fff;
 	--purple2: #3d2d81;
+	--pill1: #7859fb;
+	--pill2: #3d2d81;
+	--pill3: #886cff;
+	--archived: #787f87;
 	--svg: invert(75%);
 	--svgHover: invert(100%);
 }
 
 .light-mode {
-	--white: #ffffff;
+	--white: #000000;
 	--black: #ffffff;
-	--gray1: #dddddd;
-	--gray2: #b2b2b2;
-	--gray3: #b2b2b2;
-	--gray4: #000000;
-	--gray5: #000000;
-	--textMain: #000000;
-	--textSub1: #000000;
-	--textSub2: #000000;
-	--mainTheme: #c8c8c8;
-	--white2: #999999;
-	--red1: #000000;
-	--red2: #999999;
-	--red3: #8d8d8d;
-	--blue1: #000000;
-	--blue2: #999999;
-	--green1: #000000;
-	--green2: #999999;
-	--yellow1: #000000;
-	--yellow2: #999999;
-	--svg: invert(0%);
-	--svgHover: invert(30%);
+	--gray1: #f0f0f0;
+	--gray2: #e5e5e5;
+	--gray3: #cccccc;
+	--gray4: #999999;
+	--gray5: #808080;
+	--textMain: black;
+	--textSub1: black;
+	--textSub2: black;
+	--mainTheme: #7859fb;
+	--white2: #a3a3a3;
+	--red1: #ff4d4d;
+	--red2: #d81d1d;
+	--red3: #ffcdcd;
+	--blue1: #00b0d0;
+	--blue2: #007ac1;
+	--green1: #0e8b19;
+	--green2: #0a8e19;
+	--yellow1: #cc9000;
+	--yellow2: #f6af06;
+	--purple1: #818fff;
+	--purple2: #3d2d81;
+	--pill1: #cdc1ff;
+	--pill2: #886bff;
+	--pill3: #613df7;
+	--archived: #9a0000;
+	--svg: invert(20%);
+	--svgHover: invert(0%);
 }
 
 .btn {
@@ -135,7 +145,7 @@
 }
 
 .archived {
-	color: var(--textSub1);
+	color: var(--archived);
 }
 
 .unarchived {
@@ -149,11 +159,11 @@
 .pill {
 	border: 1px solid var(--gray1);
 	color: var(--textMain);
-	background: linear-gradient(20deg, #3d2d81, #7859fb);
+	background: linear-gradient(20deg, var(--pill2), var(--pill1));
 }
 
 	.pill:hover {
-		border: 1px solid #886cff;
+		border: 1px solid var(--pill3);
 	}
 
 	.pill.inactive {
