--- a/WCSTrainer/Pages/Skills/Create.cshtml
+++ b/WCSTrainer/Pages/Skills/Create.cshtml
@@ -39,6 +39,15 @@
                      </div>
                   </div>
                   <div class="form-group">
+                     <div class="form">
+                        <div class="labels">
+                           <p class="control-label">Skill Category</p>
+                           <span asp-validation-for="@Model.Skill.SkillCategoryId" class="text-danger"></span>
+                        </div>
+                        <select asp-for="@Model.Skill.SkillCategoryId" class="form-drop2" asp-items="@Model.CategroySelectList"></select>
+                     </div>
+                  </div>
+                  <div class="form-group">
                      <input type="submit" value="Create" class="btn bg-btn btnGreen" />
                   </div>
                </form>
