--- a/WCSTrainer/Pages/Shared/_Layout.cshtml
+++ b/WCSTrainer/Pages/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
       <title>WCSTrainer</title>
       <link rel="icon" href="/images/favicon5.png">
       <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-      <link rel="stylesheet" href="~/css/mobileSite.css" asp-append-version="true" />
+      <link rel="stylesheet" href="~/css/mobile.css" asp-append-version="true" />
       <link rel="stylesheet" href="~/css/colors.css" asp-append-version="true" />
       <link rel="stylesheet" href="~/css/universal.css" asp-append-version="true" />
    </head>
