--- a/WCSTrainer/Pages/Lessons/Create.cshtml
+++ b/WCSTrainer/Pages/Lessons/Create.cshtml
@@ -27,6 +27,13 @@
                               </div>
                               <input asp-for="Lesson.Name" class="form-control" />
                            </div>
+                           <div class="form">
+                              <div class="labels">
+                                 <p class="control-label">Lesson Category</p>
+                                 <span asp-validation-for="@Model.Lesson.LessonCategoryId" class="text-danger"></span>
+                              </div>
+                              <select asp-for="@Model.Lesson.LessonCategoryId" class="form-drop2" asp-items="@Model.CategroySelectList"></select>
+                           </div>
                         </div>
                         <div class="form-group">
                            <div class="form">
