--- a/WCSTrainer/Pages/Skills/Create.cshtml
+++ b/WCSTrainer/Pages/Skills/Create.cshtml
@@ -19,14 +19,12 @@
                         </div>
                         <input asp-for="Skill.Name" class="form-control" />
                      </div>
-                  </div>
-                  <div class="form-group">
                      <div class="form">
                         <div class="labels">
-                           <label asp-for="Skill.Description" class="control-label"></label>
-                           <span asp-validation-for="Skill.Description" class="text-danger"></span>
+                           <p class="control-label">Skill Category</p>
+                           <span asp-validation-for="@Model.Skill.SkillCategoryId" class="text-danger"></span>
                         </div>
-                        <input asp-for="Skill.Description" class="form-control" />
+                        <select asp-for="@Model.Skill.SkillCategoryId" class="form-drop2" asp-items="@Model.CategroySelectList"></select>
                      </div>
                   </div>
                   <div class="form-group">
@@ -41,10 +39,10 @@
                   <div class="form-group">
                      <div class="form">
                         <div class="labels">
-                           <p class="control-label">Skill Category</p>
-                           <span asp-validation-for="@Model.Skill.SkillCategoryId" class="text-danger"></span>
+                           <label asp-for="Skill.Description" class="control-label"></label>
+                           <span asp-validation-for="Skill.Description" class="text-danger"></span>
                         </div>
-                        <select asp-for="@Model.Skill.SkillCategoryId" class="form-drop2" asp-items="@Model.CategroySelectList"></select>
+                        <textarea asp-for="Skill.Description" class="form-control" ></textarea>
                      </div>
                   </div>
                   <div class="form-group">
