--- a/WCSTrainer/Pages/TrainingOrders/Schedule.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Schedule.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model WCSTrainer.Pages.TrainingOrders.SchedulingModel
+@model WCSTrainer.Pages.TrainingOrders.ScheduleModel
 
 <div id="people-component" class="people-component hidden">
    <partial name="_People" model="Model.Employees" />
