--- a/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
@@ -29,7 +29,7 @@
                      <input asp-for="TrainingOrder.ParentSkillId" hidden />
                      <input asp-for="TrainingOrder.CreatedByUserId" hidden />
 
-                     @if (!Model.TrainingOrder.Status.Equals("Awaiting Approval")) {
+                     @if (!Model.TrainingOrder.Status.Equals("Approval")) {
                         <div class="form-group">
                            <div class="form">
                               <div class="labels">
@@ -89,7 +89,7 @@
                            </div>
                         </div>
                      </div>
-                     @if (!Model.TrainingOrder.Status.Equals("Awaiting Approval")) {
+                     @if (!Model.TrainingOrder.Status.Equals("Approval")) {
                         <div class="form-group">
                            <div class="form">
                               <div class="labels">
@@ -129,7 +129,7 @@
                         </div>
                      }
                      <div class="form-group">
-                        @if (Model.TrainingOrder.Status == "Awaiting Approval" || Model.TrainingOrder.Status == "Active") {
+                        @if (Model.TrainingOrder.Status == "Approval" || Model.TrainingOrder.Status == "Active") {
                            <div class="form">
                               <div class="labels">
                                  <p class="control-label">Lesson</p>
@@ -138,7 +138,7 @@
                               <select asp-for="TrainingOrder.LessonId" class="form-control" asp-items="@Model.LessonSelectList"></select>
                            </div>
                         }
-                        @if (!Model.TrainingOrder.Status.Equals("Awaiting Approval")) {
+                        @if (!Model.TrainingOrder.Status.Equals("Approval")) {
                            <div class="form">
                               <div class="labels">
                                  <p class="control-label">Begin Date</p>
