--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -58,8 +58,8 @@
                      <input type="checkbox" id="showScheduling" checked />
                   </div>
                   <div class="section">
-                     <p class="section-info awaiting">Awaiting Approval</p>
-                     <input type="checkbox" id="showAwaiting" checked />
+                     <p class="section-info approval">Awaiting Approval</p>
+                     <input type="checkbox" id="showApproval" checked />
                   </div>
                </div>
                <div class="btns">
