--- a/WCSTrainer/Pages/Shared/_ListDisplay.cshtml
+++ b/WCSTrainer/Pages/Shared/_ListDisplay.cshtml
@@ -8,7 +8,7 @@
 <div class="order-list">
    <ul>
       @foreach (var item in Model.Items) {
-         <li id="@item.Name" class="archived searchable">
+         <li id="@item.Name" class="active searchable">
             <div class="info">
                <div class="title">
                   <a class="name unarchived" asp-page="./Details" asp-route-id="@item.Id">@item.Name</a>
