--- a/WCSTrainer/wwwroot/css/colors.css
+++ b/WCSTrainer/wwwroot/css/colors.css
@@ -11,8 +11,10 @@
 	--textSub2: #787f87;
 	--mainTheme: #7859fb;
 	--white2: #3b4042;
-	--red1: #ff4d4d;
-	--red2: #d81d1d;
+	--red1: #ff3d3d;
+	--red2: #c62e2e;
+	--orange1: #ff7500;
+	--orange2: #ca5d00;
 	--red3: #311313;
 	--blue1: #30b9ff;
 	--blue2: #007ac1;
@@ -20,8 +22,8 @@
 	--green2: #0a8e19;
 	--yellow1: #ffec0a;
 	--yellow2: #f6af06;
-	--purple1: #818fff;
-	--purple2: #3d2d81;
+	--purple1: #a58eff;
+	--purple2: #7050f8;
 	--pill1: #7859fb;
 	--pill2: #3d2d81;
 	--pill3: #886cff;
@@ -117,7 +119,7 @@
 }
 
 	.btnRed:hover {
-		border-color: var(--red2);
+		border-color: var(--red1);
 	}
 
 .btnGreen {
@@ -125,19 +127,19 @@
 }
 
 	.btnGreen:hover {
-		border-color: var(--green);
+		border-color: var(--green1);
 	}
 
 .active {
-	color: var(--green1);
+	color: var(--purple1);
 }
 
-.awaiting {
-	color: var(--yellow1);
+.approval {
+	color: var(--blue1);
 }
 
 .completed {
-	color: var(--blue1);
+	color: var(--purple2);
 }
 
 .verified {
@@ -145,7 +147,11 @@
 }
 
 .archived {
-	color: var(--archived);
+	color: var(--red2);
+}
+
+.scheduling {
+	color: var(--blue2);
 }
 
 .unarchived {
