--- a/WCSTrainer/Pages/TrainingOrders/Verification.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Verification.cshtml
@@ -20,6 +20,7 @@
                      <input asp-for="TrainingOrder.CompletionDate" hidden />
                      <input asp-for="TrainingOrder.CreateDate" hidden />
                      <input asp-for="TrainingOrder.ApprovalDate" hidden />
+                     <input asp-for="TrainingOrder.ScheduleDate" hidden />
 
                      <input asp-for="TrainingOrder.Medium" hidden />
                      <input asp-for="TrainingOrder.Status" type="hidden" value="Verified" />
