Fixed saving edit forms.

--- a/WCSTrainer/Pages/Lessons/Edit.cshtml
+++ b/WCSTrainer/Pages/Lessons/Edit.cshtml
@@ -11,6 +11,7 @@
                <form method="post">
                   <div asp-validation-summary="All" class="text-danger"></div>
                   <input hidden asp-for="Lesson.Id" />
+                  <input hidden asp-for="Lesson.LessonCategoryId"/>
                   <div class="form-group">
                      <div class="form">
                         <div class="labels">
