--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -671,7 +671,7 @@ nav {
 						list-style: none;
 						display: flex;
 						flex-direction: column;
-						background-color: var(--black);
+						background-color: var(--orderBack);
 					}
 
 					.panel .body .properties .list-container .order-list li {
