--- a/WCSTrainer/Pages/Skills/Edit.cshtml
+++ b/WCSTrainer/Pages/Skills/Edit.cshtml
@@ -11,7 +11,7 @@
                <form method="post">
                   <div asp-validation-summary="All" class="text-danger"></div>
                   <input hidden asp-for="Skill.Id" />
-
+                  <input hidden asp-for="Skill.SkillCategoryId" />
                   <div class="form-group">
                      <div class="form">
                         <div class="labels">
