--- a/WCSTrainer/Pages/Shared/_ListDisplay.cshtml
+++ b/WCSTrainer/Pages/Shared/_ListDisplay.cshtml
@@ -8,27 +8,11 @@
 <div class="order-list">
    <ul>
       @foreach (var item in Model.Items) {
-         <li id="@item.Name" class="active searchable">
+         <li id="@item.Description @item.Id" class="active searchable">
             <div class="info">
                <div class="title">
-                  <a class="name unarchived" asp-page="./Details" asp-route-id="@item.Id">@item.Name</a>
+                  <a class="name unarchived" asp-page="./Details" asp-route-id="@item.Id">#@item.Id - @item.Description</a>
                </div>
-               <div class="sub">
-                  <div class="sub-text">
-                     <p class="identifier">@item.Description</p>
-                  </div>
-               </div>
-            </div>
-            <div class="btns">
-               @if (SignInManager.IsSignedIn(User)) {
-                  var user = await UserManager.GetUserAsync(User);
-                  if (user != null) {
-                     var isOwner = await UserManager.IsInRoleAsync(user, "owner");
-                     if (isOwner) {
-                        <a class="btn bg-btn btnRed" asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
-                     }
-                  }
-               }
             </div>
          </li>
       }
