Approval Stage Fix

--- a/WCSTrainer/wwwroot/css/colors.css
+++ b/WCSTrainer/wwwroot/css/colors.css
@@ -12,7 +12,7 @@
 	--mainTheme: #7859fb;
 	--white2: #3b4042;
 	--red1: #ff3d3d;
-	--red2: #c62e2e;
+	--red2: #d50000;
 	--red3: #311313;
 	--blue1: #30b9ff;
 	--blue2: #007ac1;
